[gd_scene load_steps=20 format=2]

[ext_resource path="res://default_DataFiles/font/OpenSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://default_DataFiles/GUI/Scripts/mainMenu.gd" type="Script" id=2]
[ext_resource path="res://default_DataFiles/images/displayManager.png" type="Texture" id=3]
[ext_resource path="res://default_DataFiles/images/logo.png" type="Texture" id=4]
[ext_resource path="res://default_DataFiles/images/bar.png" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1280, 720 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 600, 100 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0901961, 0, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.188235, 0.00784314, 0.356863, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.435294, 0.0470588, 0.8, 1 )

[sub_resource type="Theme" id=9]
Button/styles/focus = SubResource( 13 )
Button/styles/hover = SubResource( 12 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 11 )

[sub_resource type="DynamicFont" id=10]
size = 27
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 270, 280 )

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="userName" type="Panel" parent="."]
margin_left = 104.0
margin_top = 240.0
margin_right = 548.0
margin_bottom = 280.0
custom_styles/panel = SubResource( 2 )

[node name="userNane" type="LineEdit" parent="userName"]
margin_left = 168.0
margin_top = 8.0
margin_right = 432.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Label" type="Label" parent="userName"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = ":|-------   User Name:| "

[node name="userPassword" type="Panel" parent="."]
margin_left = 104.0
margin_top = 296.0
margin_right = 548.0
margin_bottom = 336.0
custom_styles/panel = SubResource( 2 )

[node name="userPassword" type="LineEdit" parent="userPassword"]
margin_left = 200.0
margin_top = 8.0
margin_right = 432.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
secret = true

[node name="Label" type="Label" parent="userPassword"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = ":|-------   User Password:| "

[node name="welcome" type="Label" parent="."]
margin_left = 104.0
margin_top = 360.0
margin_right = 544.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 7 )
text = "welcome to GnuChanOS Game And Work
demo user name : user13 password: 123"

[node name="login" type="Button" parent="."]
margin_left = 560.0
margin_top = 240.0
margin_right = 640.0
margin_bottom = 280.0
theme = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Login"

[node name="Panel" type="Panel" parent="."]
margin_left = 743.0
margin_top = 140.0
margin_right = 1191.0
margin_bottom = 586.0
custom_styles/panel = SubResource( 14 )

[connection signal="pressed" from="login" to="." method="_on_login_pressed"]
